# dx12_mini_engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE  README.md  TODO.md  dx12_mini_engine.sublime-project  dx12_mini_engine.sublime-workspace  gui.cpp  imgui.ini  log.txt  package-lock.json  resources.rc  vcpkg.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: windows-ci.yml
include/: audio_capi.h  camera_types.h  config_data.h  d3dx12_clean.h  ecs_types.h  gfx.h  gfx_types.h  icons.h  lua_script_types.h  material_types.h  math_types.h  physics_backend.h  profiling.h  resource.h  scene_data.h  skeleton_types.h  terrain_types.h
notes/: README.md  Useful VS Code Extensions.md  architecture-reference.md  architecture.md  build-run-test.md  build.md  code-style-and-profiling.md  culling-techniques.md  debugging.md  dependencies.md  key-patterns.md  optimization.prompt.md  perf-and-cleanup-pass.md  project-overview.md  remaining-tasks-plan.md  repository-file-index.md  repository-map.md  scene-and-config.md  subsystems.md  ui.md
resources/i18n/: en.json
resources/models/: capsule.glb  cone.glb  cube.glb  cylinder.glb  icosphere.glb  plane.glb  pyramid.glb  sphere.glb  torus.glb
resources/scenes/: character_demo.json  default.json  empty.json  external_assets.json  physics_stress.json  test.json
resources/scripts/: actions.json  bounce.lua  character_controller.lua  character_demo.lua  color_cycle.lua  delete_all.lua  orbit.lua  physics_demo.lua  physics_stress.lua  pulse_emissive.lua  randomize_colors.lua  spawn_grid.lua  spawn_ring.lua
src/: application.cpp  application_render.cpp  application_scene.cpp  application_setup.cpp  application_ui.cpp  audio.cpp  billboard.cpp  bloom.cpp  bloom_composite_ps.hlsl  bloom_downsample_ps.hlsl  bloom_prefilter_ps.hlsl  camera.cpp  command_queue.cpp  config.cpp  game_main.cpp  gbuffer.cpp  gizmo.cpp  glaze_impl.cpp  gltf_impl.cpp  grid_ps.hlsl  hud.cpp  imgui_layer.cpp  input.cpp  jobs.cpp  localisation.cpp  logging.cpp  lua_scripting.cpp  lua_scripting_impl.cpp  main.cpp  object_picking.cpp  outline.cpp  outline_ps.hlsl  outline_vs.hlsl  particles.cpp  physics.cpp  physics_jolt.cpp  physics_null.cpp  physics_physx.cpp  pixel_shader.hlsl  render_graph.cpp  (+11 more)
src/application/: application.cpp  render.cpp  scene.cpp  setup.cpp  ui.cpp  ui_inspector.cpp  ui_menu.cpp  ui_metrics.cpp  ui_overlay.cpp  ui_util.cpp
src/gfx/: d3d12_backend.cpp  d3d12_command.cpp  d3d12_internal.h  d3d12_swapchain.cpp
src/modules/: application.ixx  audio.ixx  billboard.ixx  bloom.ixx  camera.ixx  command_queue.ixx  common.ixx  config.ixx  ecs_components.ixx  gbuffer.ixx  gfx.ixx  gizmo.ixx  hud.ixx  imgui_layer.ixx  input.ixx  jobs.ixx  localisation.ixx  logging.ixx  lua_scripting.ixx  math.ixx  object_picking.ixx  outline.ixx  particles.ixx  physics.ixx  render_graph.ixx  restir.ixx  save_game.ixx  scene.ixx  scene_file.ixx  shader_hotreload.ixx  shadow.ixx  ssao.ixx  terrain.ixx  window.ixx
src/shaders/: billboard_ps.hlsl  billboard_vs.hlsl  bloom_composite_ps.hlsl  bloom_downsample_ps.hlsl  bloom_prefilter_ps.hlsl  bloom_upsample_ps.hlsl  fullscreen_vs.hlsl  gbuffer_ps.hlsl  grid_ps.hlsl  grid_vs.hlsl  id_ps.hlsl  normal_ps.hlsl  outline_ps.hlsl  outline_vs.hlsl  pixel_shader.hlsl  sky.hlsli  ssao_blur_ps.hlsl  ssao_ps.hlsl  vertex_shader.hlsl
tests/: audio_stub.cpp  gfx_tests.cpp  localisation_tests.cpp  lua_scripting_tests.cpp  math_types_tests.cpp  subsystem_tests.cpp
tools/: asset_cooker.cpp
